--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -143,7 +143,7 @@
     </aside>
 
     <footer>
-      <p id="copyright">
+      <p id="copyright" class="copyright text">
         Copyright &copy; 2027 by The Code Magazine.</footer>
       </p>
   </body>
