--- a/03-CSS-Fundamentals/Challenge/challenge.html
+++ b/03-CSS-Fundamentals/Challenge/challenge.html
@@ -19,6 +19,14 @@
       <p class="text">Ready to dress up or down, these classic canvas Chucks are an everyday wardrobe staple.</p>
 
       <a class="more-info" href="https://www.converse.com">More information &rarr;</a>
+      <div class="colors-container">
+        <div class="color black"></div>
+        <div class="color color-blue"></div>
+        <div class="color color-red"></div>
+        <div class="color color-yellow"></div>
+        <div class="color color-green"></div>
+        <div class="color color-brown"></div>
+      </div>
 
       <h3 class="details-title">Product details</h3>
       <ul class="details-list">
