--- a/04-CSS-Layouts/css-grid.html
+++ b/04-CSS-Layouts/css-grid.html
@@ -53,6 +53,22 @@
         row-gap: 40px;
       }
 
+      .el--8 {
+        grid-column: 2 / 3;
+        grid-row: 1 / -1;
+      }
+
+      .el--2 {
+        /* grid-column: 1 / 4; */
+        /* grid-column: 1 / span 4; */
+        /* grid-column: 1 / -1; */
+        grid-row: 2;
+      }
+
+      .el--6 {
+        /* grid-row: 1 / -1; */
+      }
+
       .container--2 {
         /* STARTER */
         display: none;
@@ -76,7 +92,7 @@
       <div class="el el--4">(4) are</div>
       <div class="el el--5">(5) amazing</div>
       <div class="el el--6">(6) languages</div>
-      <div class="el el--7">(7) to</div>
+      <!-- <div class="el el--7">(7) to</div> -->
       <div class="el el--8">(8) learn</div>
     </div>
 
