--- a/04-CSS-Layouts/css-grid.html
+++ b/04-CSS-Layouts/css-grid.html
@@ -14,7 +14,7 @@
       }
       .el--3 {
         background-color: green;
-        /* height: 150px; */
+        height: 150px;
       }
       .el--4 {
         background-color: goldenrod;
@@ -55,13 +55,13 @@
 
       .el--8 {
         grid-column: 2 / 3;
-        grid-row: 1 / -1;
+        grid-row: 1 / 2;
       }
 
       .el--2 {
         /* grid-column: 1 / 4; */
         /* grid-column: 1 / span 4; */
-        /* grid-column: 1 / -1; */
+        grid-column: 1 / -1;
         grid-row: 2;
       }
 
@@ -71,16 +71,35 @@
 
       .container--2 {
         /* STARTER */
-        display: none;
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
         margin: 100px;
 
-        width: 1000px;
+        width: 700px;
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
+        gap:40px;
+
+        /* Aligning tracks inside container: distribute empty space */
+        justify-content: center;
+        /* justify-content: space-between; */
+
+        align-content: center;
+
+        /* Aligning the items INSIDE the cells: moving items around inside cells. */
+
+        align-items: end;
+        justify-items: end;
+      }
+
+      .el--3 {
+        align-self: center;
+        justify-self: center;
       }
     </style>
   </head>
