--- a/05-Design/index.html
+++ b/05-Design/index.html
@@ -228,8 +228,7 @@
     </section>
 
     <footer>
-      Copyright &copy; 2027 by Jonas Schmedtmann. Part of "Build Responsive
-      Real-World Websites with HTML and CSS" online course.
+      Copyright &copy; 2027 by Jonas Schmedtmann. Web Design Project created during the online course "Build Responsive Real-World Websites with HTML and CSS".
     </footer>
   </div>
 </body>
