Building the Testimonial Section - pt2

--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -222,7 +222,7 @@
         <a href="#" class="link"> See all recipes &rarr;</a>
       </div>
     </section>
-    <section class="section-testimonials grid grid--2--cols">
+    <section class="section-testimonials">
       <div class="testimonial-container">
         <span class="subheading">Testimonials</span>
         <h2 class="heading-secondary">
@@ -264,7 +264,45 @@
           </figure>
         </div>
       </div>
-      <div class="galler">Gallery</div>
+      <div class="gallery">
+        <figure class="gallery-item">
+          <img src="img/gallery/gallery-1.jpg" alt="Photo of beatifully arranged food" />
+          <!-- <figcaption></figcaption> -->
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallery/gallery-2.jpg" alt="Photo of beatifully arranged food" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallery/gallery-3.jpg" alt="Photo of beatifully arranged food" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallery/gallery-4.jpg" alt="Photo of beatifully arranged food" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallery/gallery-5.jpg" alt="Photo of beatifully arranged food" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallery/gallery-6.jpg" alt="Photo of beatifully arranged food" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallery/gallery-7.jpg" alt="Photo of beatifully arranged food" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallery/gallery-8.jpg" alt="Photo of beatifully arranged food" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallery/gallery-9.jpg" alt="Photo of beatifully arranged food" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallery/gallery-10.jpg" alt="Photo of beatifully arranged food" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallery/gallery-11.jpg" alt="Photo of beatifully arranged food" />
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallery/gallery-12.jpg" alt="Photo of beatifully arranged food" />
+        </figure>
+      </div>
     </section>
   </main>
 </body>
