--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -313,7 +313,7 @@
       </div>
 
       <div class="container grid grid--2--cols">
-        <div class="pricing-plan">
+        <div class="pricing-plan pricing-plan--starter">
           <header class="plan-header">
             <p class="plan-name"> Starter</p>
             <p class="plan-price"><span>$</span>399</p>
@@ -324,10 +324,13 @@
               <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>1 meal per day</span>
             </li>
             <li class="list-item">
-              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Order times are between 11am and 9pm</span>
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Order from 11am and 9pm</span>
             </li>
             <li class="list-item">
               <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Delivery is free</span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="close-outline"></ion-icon>
             </li>
           </ul>
           <div class="plan-sign-up">
@@ -335,7 +338,7 @@
           </div>
         </div>
 
-        <div class="pricing-plan">
+        <div class="pricing-plan pricing-plan--complete">
           <header class="plan-header">
             <p class="plan-name"> Complete</p>
             <p class="plan-price"><span>$</span>649</p>
@@ -343,10 +346,10 @@
           </header>
           <ul class="list">
             <li class="list-item">
-              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>2 meals per day</span>
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span><strong>2 meals</strong>per day</span>
             </li>
             <li class="list-item">
-              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Order 24/7</span>
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Order <strong>24/7</strong></span>
             </li>
             <li class="list-item">
               <ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Delivery is free</span>
@@ -359,6 +362,13 @@
             <a href="#" class="btn btn--full">Start eating well</a>
           </div>
         </div>
+      </div>
+
+      <div class="container grid grid--4--cols">
+        <div class="feature">Feature 1</div>
+        <div class="feature">Feature 2</div>
+        <div class="feature">Feature 3</div>
+        <div class="feature">Feature 4</div>
       </div>
     </section>
   </main>
