--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -405,7 +405,7 @@
               </div>
               <div>
                 <label for="email-label">Email Address</label>
-                <input id="email-label" type="email" required>
+                <input id="email-label" type="email" required placeholder="me@example.com">
               </div>
               <div>
                 <label for="select-where">Where did you hear from us?</label>
@@ -419,7 +419,7 @@
                 </select>
               </div>
               
-              <button class="btn">Sign up now</button>
+              <button class="btn btn--form">Sign up now</button>
             </form>
           </div>
           <div class="cta-img-box" role="img" aria-label="Women enjoying food"></div>
