Removing some useless code.

--- a/80-Omnifood-Desktop-Responsive/index.html
+++ b/80-Omnifood-Desktop-Responsive/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="  viewport" content="width=device-width, initial-scale=1.0" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet" />
+
   <link rel="stylesheet" href="css/general.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/queries.css" />
+
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
   <title>Omnifood</title>
 </head>
-
 <body>
   <header class="header">
     <a href="#">
@@ -31,11 +33,12 @@
       </ul>
     </nav>
   </header>
+
   <main>
     <section class="section-hero">
       <div class="hero">
         <div class="hero-text-box">
-          <h1 class="hero-primary heading-primary">
+          <h1 class="heading-primary">
             A healthy meal delivered to your door, every single day
           </h1>
           <p class="hero-description">
@@ -65,6 +68,7 @@
         </div>
       </div>
     </section>
+
     <section class="section-featured">
       <div class="container">
         <h2 class="heading-featured-in">As featured in</h2>
@@ -77,6 +81,7 @@
         </div>
       </div>
     </section>
+
     <section class="section-how">
       <div class="container">
         <span class="subheading">How it works</span>
@@ -131,6 +136,7 @@
         </div>
       </div>
     </section>
+
     <section class="section-meals">
       <div class="container center-text">
         <span class="subheading">Meals</span>
@@ -138,6 +144,7 @@
           Omnifood AI chooses from 5,000+ recipes
         </h2>
       </div>
+
       <div class="container grid grid--3--cols margin-botton-md">
         <div class="meal">
           <img src="img/meals/meal-1.jpg" class="meal-img" alt="Japanese Gyozas Image" />
@@ -187,6 +194,7 @@
             </ul>
           </div>
         </div>
+
         <div class="diets">
           <h3 class="heading-tertiary">Works with any diet</h3>
           <ul class="list">
@@ -220,10 +228,12 @@
           </ul>
         </div>
       </div>
+
       <div class="container all-recipes">
         <a href="#" class="link"> See all recipes &rarr;</a>
       </div>
     </section>
+    
     <section class="section-testimonials">
       <div class="testimonial-container">
         <span class="subheading">Testimonials</span>
