--- a/09- Omnifood-Optimizations/index.html
+++ b/09- Omnifood-Optimizations/index.html
@@ -87,11 +87,15 @@
             </div>
           </div>
           <div class="hero-img-box">
-            <img
-              src="img/hero.png"
+            <picture>
+              <source srcset="img/hero.webp" type="image/webp" />
+              <source srcset="img/hero-main.png" type="image/png" />
+              <img
+              src="img/hero.webp"
               class="hero-img"
               alt="Woman enjoying food, meals in storage container, and food bowls on a table"
             />
+            </picture>
           </div>
         </div>
       </section>
